<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sign_in_email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pw_user_hint" />

        <EditText
            android:id="@+id/pw_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_email_title"
            android:hint="@string/pw_user_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/sign_in_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pw_user"
            android:text="@string/pw_pw_hint" />

        <EditText
            android:id="@+id/pw_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_password_title"
            android:hint="@string/pw_pw_hint"
            android:inputType="textPassword" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pw_pw"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pw_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw_cancel_btn" />

            <Button
                android:id="@+id/pw_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw_validate_btn" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>